build/log/idf_py_stderr_output_2688310
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:162:1: error: expected identifier or '(' before '}' token
  162 | }
      | ^
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:79:13: warning: 'init_server' defined but not used [-Wunused-function]
   79 | static void init_server() {
      |             ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4656: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
